syntax = "proto3";

import "models.proto";

package v2.services;

option go_package = "github.com/getcouragenow/mod/mod-account/service/go/rpc/v2";

service AccountService {
  rpc ListAccounts(v2.services.ListAccountsRequest) returns (v2.services.ListAccountsResponse) {};
 
}
